force-app/main/default/objects/cdcpc__RD_Outlet_Liner_Part_Number__c/fields/cdcpc__DiscThckLL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__DiscThckLL__c</fullName>
    <label>DiscThckLL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>