force-app/main/default/objects/cdcpc__RD_Outlet_Liner_Part_Number__c/fields/cdcpc__SourceCode__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__SourceCode__c</fullName>
    <label>SourceCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>