force-app/main/default/objects/cdcpc__RD_Outlet_Liner_Part_Number__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>cdcpc__PTC__c</columns>
    <columns>cdcpc__STC__c</columns>
    <columns>cdcpc__SZC__c</columns>
    <columns>cdcpc__MCOL__c</columns>
    <columns>cdcpc__CapHt__c</columns>
    <columns>cdcpc__DiscThckLL__c</columns>
    <columns>cdcpc__DiscThckUL__c</columns>
    <columns>cdcpc__DSCVAR__c</columns>
    <columns>cdcpc__MfgRngLL__c</columns>
    <columns>cdcpc__MfgRngUL__c</columns>
    <columns>cdcpc__OptionCode__c</columns>
    <columns>cdcpc__OutletLinerPartNumber__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cdcpc__PTC__c</field>
        <operation>equals</operation>
        <value>PLV</value>
    </filters>
    <filters>
        <field>cdcpc__STC__c</field>
        <operation>equals</operation>
        <value>LL</value>
    </filters>
    <filters>
        <field>cdcpc__SZC__c</field>
        <operation>equals</operation>
        <value>0600</value>
    </filters>
    <filters>
        <field>cdcpc__MCOL__c</field>
        <operation>equals</operation>
        <value>070</value>
    </filters>
    <label>All</label>
</ListView>